--- a/app.json
+++ b/app.json
@@ -1,6 +1,10 @@
 {
   "expo": {
     "name": "fitfriend",
+    "extra": {
+      "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_c3F1YXJlLWxhbXByZXktMC5jbGVyay5hY2NvdW50cy5kZXYk",
+      "G_API_KEY": "AIzaSyD1l2Wfe8nPkWrys1ubb8HJMRGo3Hml1fc"
+    },
     "slug": "fitfriend",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -27,7 +31,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": ["expo-router", "expo-secure-store"],
     "experiments": {
       "typedRoutes": true,
       "tsconfigPaths": true
