--- a/package.json
+++ b/package.json
@@ -13,19 +13,35 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.20.6",
     "@expo/vector-icons": "^14.0.0",
+    "@google-ai/generativelanguage": "^2.1.0",
+    "@google/generative-ai": "^0.2.1",
     "@react-navigation/native": "^6.0.2",
+    "@react-pdf/renderer": "^3.3.8",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.8",
+    "expo-document-picker": "^11.10.1",
+    "expo-file-system": "^16.0.7",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "^14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
+    "expo-secure-store": "~12.8.1",
+    "expo-sharing": "^11.10.0",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "pdfjs-dist": "^4.0.379",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
     "react-native": "0.73.4",
+    "react-native-calendars": "^1.1304.0",
+    "react-native-document-picker": "^9.1.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
