--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/(tabs)/ai_assistent.tsx", "app/(tabs)/_layout.tsx"  ]
 }
